# PhotonDrift

./: .adrscan.example.yml  .adrscan.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CACHE_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CI_CD_OPTIMIZATION_GUIDE.md  CODE_CONDUCT_SECURITY_ISSUE.md  COMPATIBILITY_TESTING_STRATEGY.md  COMPILATION_ERRORS_ISSUE.md  COMPILATION_PERFORMANCE_OPTIMIZATIONS.md  CONTAINER_BINARY_SILENT_FAILURE_ISSUE.md  CONTAINER_BUILD_ANALYSIS_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_SUCCESS_SUMMARY.md  DOCS_INTEGRATION_SUMMARY.md  DOCUSAURUS_INTEGRATION_TEST_REPORT.md  Dockerfile  Dockerfile.optimized  FINAL_INTEGRATION_REPORT.md  GITHUB_COORDINATOR_DOCUMENTATION.md  GITHUB_MANAGEMENT_REPORT.md  GITHUB_WORKFLOW_ANALYSIS.md  INTEGRATION_TEST_REPORT.md  Makefile  PARALLEL_EXECUTION_OPTIMIZATION.md  PIPELINE_ARCHITECTURE_SUMMARY.md  PR_DESCRIPTION.md  README-ACTION.md  README.md  RELEASE_NOTES_v0.2.0-alpha.20250121.md  RELEASE_NOTES_v0.2.0-alpha.20250721.md  RELEASE_SUMMARY_v0.2.0-alpha.20250121.md  ROADMAP.md  RUST_UPGRADE_ISSUE.md  RUST_WASMTIME_UPGRADE_PLAN.md  SECURITY_IMPROVEMENTS.md  (+22 more)
.cargo/: audit.toml  config.toml.backup
.claude/: settings.local.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.devcontainer/: bootstrap.sh  devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS  PR_MANAGER_README.md  PULL_REQUEST_TEMPLATE.md  WORKFLOW_SUMMARY.md  branch-protection.json  dependabot.yml  pipeline-config.yml  pipeline-optimization.md  workflow-improvements.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  epic.yml  feature_request.yml  implementation_task.yml  research_spike.yml
.github/cache-config/: rust-cargo-cache.yml
.github/pr-templates/: enhanced-pr-template.md
.github/scripts/: security-checksum-helper.sh
.github/workflows/: adrscan-action.yml  auto-release.yml  automated-testing-validation.yml  branch-sync.yml  build-configs.yml  build-monitor.yml  cache-fallback-warming.yml  cache-optimization.yml  cache-performance-monitor.yml  cache-strategies.yml  ci.yml  conflict-resolver.yml  container-build-comprehensive.yml  container-build.yml  container-management.yml  dependency-validation.yml  deployment-automation.yml  docker.yml  docs-deploy.yml  formal-release.yml  gh-coordinator.yml  intelligent-load-balancer.yml  issue-management.yml  issue-triage.yml  manual-coordinator-trigger.yml  matrix-build.yml  merge-conflict-detector.yml  merge-conflict-resolver.yml  optimized-ci-cache.yml  optimized-ci.yml  optimized-pipeline-architecture.yml  parallel-optimization.yml  parallel-test-execution.yml  path-detection.yml  performance-monitoring.yml  pr-manager.yml  project-automation.yml  quality-gates.yml  release-automation.yml  release.yml  (+7 more)
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1753018175949-0jeo9ucwv.txt  hive-mind-prompt-swarm-1753018294042-9ynrtjkwq.txt  hive-mind-prompt-swarm-1753032523507-x00sqfwgp.txt  session-1753017496703-09kpal5cf-auto-pause.json  session-1753017496703-09kpal5cf-auto-save-1753017516240.json  session-1753017645239-siu8lpgf7-auto-save-1753017675239.json  session-1753018175951-rbswdi1m4-auto-save-1753018205951.json  session-1753018294043-gq00oevvj-auto-save-1753018324043.json  session-1753032523509-qhhxqzr7b-auto-save-1753032553511.json  session-1753040053985-l2f6k9rxm-auto-save-1753040083986.json  session-1753042117276-l8d07ee7a-auto-save-1753042147278.json
.roo/: one-rule-two-rule-them-all.md
.swarm/: memory.db
dashboard/: API_SPECIFICATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.sql  README.md  TESTING_SETUP_SUMMARY.md  TEST_PLAN.md  integration-test.cjs  package-lock.json  package.json
dashboard/backend/: .env.example  .env.test  Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
dashboard/frontend/: package.json  tsconfig.app.json  vitest.config.ts
docs/: ARCHITECTURE_ENHANCEMENTS.md  CONFIGURATION.md  DEPENDENCY_ANALYSIS_REPORT.md  DEVELOPMENT.md  DOCKER_BUILD_GUIDE.md  GITHUB_MANAGEMENT_SUMMARY.md  ISSUE_MANAGEMENT.md  ISSUE_TRIAGE_GUIDE.md  NEURAL_TRAINING.md  PHASE_2.5_DEPENDENCY_AUTOMATION.md  PHASE_2.5_IMPLEMENTATION_SUMMARY.md  PHASE_3_ROADMAP.md  QUICK_START.md  README.md  TEMPORAL_ANALYSIS.md  USER_GUIDE.md  WASM_FILE_IO.md  container-versioning-diagram.md  container-versioning-strategy.md  journey.md  lsp-integration.md
docs-site/: DEPENDENCY_UPDATE_SUMMARY.md  README.md  docusaurus.config.js  package-lock.json  package.json  performance-analysis-report.md  sidebars.js
docs-site/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs-site/docs/: container-versioning-diagram.md  journey.md  (+8 more)
examples/: ci-cd-integration.js  realtime_usage.rs
k8s/: deployment.yaml
memory/: claude-flow-data.json  memory-store.json
plans/: docusaurus-architecture.md  docusaurus-integration-plan.md  journey_roadmap.md  trainging.md
scripts/: build-automation.sh  build-docs.sh  build-wasm-optimized.sh  cli-docs-generator.js  container-health-monitor.sh  debug-toolkit.sh  dependency-validation.sh  dev-docs.sh  docs-sync.js  fast-dev-build.sh  intelligent-triage.js  issue-triage.sh  link-validator.js  performance-benchmark.sh  pipeline-integration.sh  rust-upgrade-validator.sh  security-check.sh  semantic-version.sh  setup-hooks.sh  test-docker-enhancements.sh  test-versioning.sh  validate-build-scripts.sh  validate-containers.sh  validate-dockerfile.sh
src/: config.rs  error.rs  lib.rs  main.rs  parser.rs  wasm.rs  wasm_simple.rs
templates/: advanced_adr_template.md  madr.md
test_env/: drift_report.yaml
tests/: dependency_validation.rs  integration_tests.rs  lsp_integration_tests.rs  realtime_integration_tests.rs
vscode-extension/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
wasm/: README.md  benchmark.js  index.d.ts  index.js  package.json  test.js
(+311 files in other folders)
