[package]
name = "adrscan"
version = "0.2.0-alpha.20250720"
edition = "2021"
authors = ["tbowman01"]
description = "AI-powered Architecture Decision Record (ADR) management with ML-enhanced drift detection"
license = "MIT"
repository = "https://github.com/tbowman01/PhotonDrift"
keywords = ["adr", "architecture", "documentation", "cli", "drift-detection", "ml", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.9"

# File system and path handling
walkdir = "2.4"
glob = "0.3"

# Markdown and frontmatter parsing
pulldown-cmark = "0.13"
yaml-front-matter = "0.1"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# JSON handling
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions for pattern matching
regex = "1.10"

# Async runtime for drift detection (not compatible with WASM)
tokio = { version = "1.0", features = ["full"], optional = true }

# Cryptographic hashing for file content
sha2 = "0.10"

# Machine Learning dependencies (conditional on ml feature)
smartcore = { version = "0.4", optional = true }
ndarray = { version = "0.15", optional = true }
rand = { version = "0.8", optional = true }
nalgebra = { version = "0.32", optional = true }

# WebAssembly bindings (only for WASM target)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["tokio"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]
ml = ["smartcore", "ndarray", "rand", "nalgebra"]
[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[lib]
name = "adrscan"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "adrscan"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true